# squidcode

./: .env.example  .gitignore  README.md  demo.py  demo_real.py  pyproject.toml  test_llm_direct.py
data/glossaries/: general.json
data/style_guides/: default.md
squid/: generate_cert.sh  squid.conf
squidcode/: __init__.py  __main__.py  config.py  main.py
squidcode/cache/: embedding.py  semantic_cache.py
squidcode/icap/: handler.py  protocol.py  server.py
squidcode/llm/: client.py  prompts.py
squidcode/rag/: indexer.py  retriever.py  store.py
squidcode/rewriter/: html_parser.py  pipeline.py  script_injector.py  text_batcher.py
squidcode/runtime/: client.js
squidcode/sse/: endpoint.py  manager.py
squidcode/utils/: quality.py  session.py
tests/: conftest.py  test_hotswap.py  test_html_parser.py  test_icap_protocol.py  test_llm_client.py  test_pipeline.py  test_rag_retriever.py  test_script_injector.py  test_semantic_cache.py
tests/fixtures/: sample_page.html  sample_style_guide.md
