[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squidcode"
version = "0.1.0"
description = "Streaming Semantic Proxy — ICAP-based AI text rewriting"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "openai>=1.14",
    "httpx>=0.27",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "chromadb>=0.4.24",
    "sentence-transformers>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["squidcode*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
